<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="28dp"
    app:cardElevation="10dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@color/surface">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_text"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:textColor="@color/onSurface"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/edtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text_custom"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_enter_text"
            android:minHeight="54dp"
            android:padding="16dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/onSecondary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_cancel"
                android:padding="12dp"
                android:textColor="@color/onSurfaceVariant"
                android:textSize="14sp"
                android:fontFamily="@font/bold"
                android:letterSpacing="0.05"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_confirm"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@drawable/bg_button_primary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:elevation="4dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>