<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:clipToPadding="true"
    android:padding="@dimen/normal_padding">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_audio_permission"
        android:textAlignment="center"
        android:textColor="@color/surface"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_top_small"
        android:alpha="0.7"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:text="@string/description_audio_permission"
        android:textAlignment="center"
        android:textColor="@color/surface"
        android:textSize="@dimen/content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/dialog_margin_top_large"
        android:layout_marginEnd="@dimen/button_side_margin"
        android:text="@string/cancel"
        android:textColor="@color/primary"
        android:textSize="@dimen/content_text"
        app:cornerRadius="@dimen/button_corner_radius"
        app:strokeColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_setting"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_side_margin"
        android:text="@string/go_to_setting"
        android:textColor="@color/onPrimary"
        android:textSize="@dimen/content_text"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>