<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tertiary"
    android:paddingBottom="105dp"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:tabIndicatorColor="@color/primary"
        app:tabSelectedTextColor="@color/primary"
        app:tabTextColor="@color/onSurfaceVariant"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_template" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_style" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_font" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/tabContainer"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="12dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTemplates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_size"
                    android:fontFamily="@font/regular"
                    android:textSize="13sp" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:trackHeight="4dp"
                    app:labelBehavior="gone"
                    android:valueFrom="10"
                    android:valueTo="100"
                    android:value="40" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_label_opacity"
                    android:fontFamily="@font/regular"
                    android:textSize="13sp" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderAlpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="0"
                    app:trackHeight="4dp"
                    app:labelBehavior="gone"
                    android:valueTo="255"
                    android:value="255" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_label_color"
                    android:fontFamily="@font/regular"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/btnResetColor"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="12dp"
                        android:padding="6dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_pen"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvColors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFonts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>